--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  cursor: none;
   background-color: rgb(24, 24, 24);
   color: antiquewhite;
 }
@@ -15,10 +16,10 @@ body {
 nav {
   display: flex;
   justify-content: space-between;
-  width: 90%;
+  width: 20%;
   min-height: 10vh;
   align-items: center;
-  margin: auto;
+  margin: left;
 }
 
 .nav-links {
@@ -64,34 +65,94 @@ h1 {
 /* Bio */
 .bio {
   text-align: center;
+  margin-right: 10rem;
+  width: 50%;
+  padding: 8px;
+  float: right;
 } 
 
 .bio img {
+  float: right;
+  margin-left: .5rem;
+  shape-outside: ellipse(50% 60%);
   width: 300px;
   height: 400px;
-  z-index: -3;
   position: relative;
+  z-index: -3;
+  border-radius: 50%;
+  box-shadow:rgb(134, 90, 186) 10px 10px 10px;
+}
+
+.bio-text {
+padding: 3rem 0 0;
 }
 
 /* project */
-.project-links li {
+/* .project-links li {
   padding: 1rem;
   display: flex;
   justify-content: space-between;
   list-style: none;
   color: antiquewhite;
+} */
+.projects {
+  margin-top: 50%;
 }
 
 .project-links:hover {
   color:black;
 }
 
-/* logo grid */
-.grid-container {
+.grid-container-projects {
   display: grid;
+  grid-gap: 1em;
+  grid-template-columns: 30% 30% 30%;
+  grid-auto-rows:minmax(80px, auto);
+  text-align: center;
+  margin-right: 25rem;
+  /* margin-top: 40rem; */
+  margin-left: 5rem;
+  
+
+}
+
+/* logo grid */
+.grid-container-logo {
+  display: grid;
+  grid-gap: 1em;
   grid-template-columns: 30% 30% 30%;
 }
 
 .grid-container > div {
   padding: 1em;
 }
+
+/* skills logos */
+#csharp {
+  height: 100px;
+}
+
+#css {
+  height: 100px;
+}
+
+#firebase {
+  height: 150px;
+}
+
+#javascript {
+  height: 100px;
+}
+
+#mysql {
+  height: 100px;
+}
+
+#nodejs {
+  height: 100px;
+}
+
+#react {
+  height: 100px;
+}
+
