--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,13 +9,14 @@
 body {
   font-family: "Poppins", sans-serif;
   cursor: none;
-  background-color: rgb(24, 24, 24);
+  background-color: #000;
   color: antiquewhite;
 }
 
 /* Navigation */
 
 nav {
+  position: absolute;
   display: flex;
   justify-content: space-between;
   width: 20%;
@@ -25,20 +26,18 @@ nav {
 }
 
 .nav-links {
+  position: absolute;
+  margin-left: 1rem;
   display: flex;
   justify-content: space-between;
   list-style: none;
   color: antiquewhite;
+  z-index: 11;
 }
 
 .nav-links a {
   text-decoration: none;
-  color:antiquewhite
-}
-
-.nav-links,
-h1 {
-  flex: 1;
+  color:antiquewhite;
 }
 
 .cursor {
@@ -52,7 +51,7 @@ h1 {
   transition: all 0.3s ease;
   transition-property: background, transform;
   transform-origin: 100% 100%;
-  z-index: -1;
+  z-index: 10;
   backdrop-filter: grayscale();
 }
 
@@ -63,46 +62,174 @@ h1 {
 
 .nav-links li {
   padding: 1rem;
+  z-index: 9;
 }
 
-.hovered-link {
+a:hover {
   color: black;
 }
+
+/* Name Video */
+@import url('https://fonts.googleapis.com/css2?family=Rubik+80s+Fade&display=swap');
+section:before {
+  content: "";
+  position: absolute;
+  height: 50vh;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 500px;
+  background:linear-gradient(to right, rgb(134, 90, 186), rgb(173, 168, 179));
+  mix-blend-mode: color;
+  pointer-events: none;
+}
+
+video {
+  object-fit: cover;
+  margin-top: 0;
+  max-height: 500px;
+  min-width: 100%
+}
+
+section {
+  height: 30vh;
+  background: #000;
+  position: relative;
+}
+
+h1 {
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 60%;
+  transform: translateY(-50%);
+  width: 100%;
+  text-align: center;
+  color: antiquewhite;
+  font-size: 5em;
+  letter-spacing: 0.2em;
+  font-family: "Rubik 80s fade", cursive;
+}
+
+h1 span {
+  opacity: 0;
+  display: inline-block;
+  animation: animate 1s linear forwards;
+}
+
+@keyframes animate {
+  0% {
+    opacity: 0;
+    transform: rotateY(90deg);
+    filter: blur(10px)
+  }
+  100% {
+    opacity: 1;
+    transform: rotateY(0deg);
+    filter: blur(0px)
+  }
+}
+
+h1 span:nth-child(1) {
+  animation-delay: .5s;
+}
+
+h1 span:nth-child(2) {
+  animation-delay: 1s;
+}
+
+h1 span:nth-child(3) {
+  animation-delay: 1.5s;
+}
+
+h1 span:nth-child(4) {
+  animation-delay: 1.75s;
+}
+
+h1 span:nth-child(5) {
+  animation-delay: 2s;
+}
+
+h1 span:nth-child(6) {
+  animation-delay: 2.5s;
+}
+
 
 /* Bio */
 .bio {
   text-align: center;
-  margin-right: 7rem;
-  margin-top: 1rem;
   width: 50%;
   padding: 8px;
-  float: right;
+  position: absolute;
+  z-index: 1;
+  margin-left: 25%;
+  margin-top: 5rem;
 } 
 
 
 .bio img {
   float: right;
-  margin-left: .5rem;
+  /* margin-left: .5rem; */
   shape-outside: ellipse(50% 50%);
   width: 300px;
   height: 400px;
   position: relative;
-  z-index: -3;
+  z-index: 2;
   border-radius: 50%;
   box-shadow:rgb(134, 90, 186) 10px 10px 10px;
 }
 
 .bio-text {
 padding: 2rem 0 0;
-margin-left: 5rem;
+/* margin-left: 5rem; */
 }
 
 /* projects */
+.projects h1 {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  padding: 0 30px;
+  text-shadow: 0 0 30px rgb(134, 90, 186);
+  font-size: 50px;
+  font-weight: lighter;
+  margin-left: 10rem;
+  margin-top: 60%;
+  z-index: 12;
+  transition: 0.5s ease-out;
+}
+
+.projects h1:after {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0 30px;
+  z-index: -1;
+  color:rgb(134, 90, 186);
+  filter: blur(15px);
+}
+
+.projects h1:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(134, 90, 186);
+  z-index: -2;
+  opacity: 1;
+  filter: blur(40px);
+}
+
+.projects h1:hover {
+  color: rgb(156, 95, 227);
+  text-shadow: 0 0 5px rgb(156, 95, 227), 0 0 10px rgb(156, 95, 227), 0 0 15px rgb(156, 95, 227);
+}
+
 .projects {
   margin-top: 60%;
   margin-left: 4rem;
-  margin-right: 35rem;
-
 }
 
 .project-links:hover {
@@ -115,32 +242,85 @@ margin-left: 5rem;
   grid-template-columns: 30% 30% 30%;
   grid-auto-rows:minmax(80px, auto);
   text-align: center;
-  margin-right: 1rem;
-  margin-left: 5rem;
-  border: 5px ridge rgb(134, 90, 186);  
+  margin-right: 5rem;
+  margin-left: 4rem;
+  margin-top: 45%;
+  border: 5px ridge rgb(134, 90, 186);
   box-shadow:rgb(134, 90, 186) 10px 10px 10px;
   border-top-left-radius: 20px;
+  overflow: hidden;
+  padding: 30px;
 }
 
 /* logo grid */
+.skills h1 {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  padding: 0 30px;
+  text-shadow: 0 0 30px rgb(134, 90, 186);
+  margin-left: 55rem;
+  margin-top: 90%;
+  font-size: 50px;
+  font-weight: lighter;
+  transition: 0.5s ease-out;
+  z-index: 12;
+}
+
+.skills h1:hover {
+  color: rgb(156, 95, 227);
+  text-shadow: 0 0 5px rgb(156, 95, 227), 0 0 10px rgb(156, 95, 227), 0 0 15px rgb(156, 95, 227);
+}
+
+.skills h1:after {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0 30px;
+  z-index: -1;
+  color:rgb(134, 90, 186);
+  filter: blur(15px);
+}
+
+.skills h1:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(134, 90, 186);
+  z-index: -2;
+  opacity: 1;
+  filter: blur(40px);
+}
+
 .grid-container-logo {
   display: grid;
-  grid-gap: 1em;
-  grid-template-columns: 30% 30% 30%;
+  grid-template-columns: repeat(7, 1fr);
+  position:absolute;
+  /* border: 5px ridge rgb(134, 90, 186); */
+  margin-left: 10rem;
+  margin-right: 3rem;
+  margin-top: 120%;
 }
 
-.grid-container > div {
-  padding: 1em;
+.grid-container-logo > div {
+  padding: 1px;
 }
 
-/* skills logos */
 .card {
-  background-color: rgb(134, 90, 186);
+  background-color: rgb(206, 204, 203);
   color: #333;
   border-radius: 10px;
-  box-shadow: 0 3px 10px rgba(134, 90, 186, 0.2);
+  box-shadow: 10px 10px 10px rgb(134, 90, 186);
   padding: 10px;
   margin: 10px;
+  max-width: 100px;
+  max-height:100px;
+  min-width: 100px;
+  min-height: 100px;
+  justify-content: center;
 }
 
 .skills .flex {
@@ -150,35 +330,14 @@ margin-left: 5rem;
 .skills .card {
   text-align: center;
   margin: 18px 10px 40px;
+  transition: transform 0.2s ease-in;
 }
 
-#csharp {
-  height: 100px;
+.skills .card:hover {
+  transform: translateY(-20px);
 }
 
-#css {
-  height: 100px;
-}
 
-#firebase {
-  height: 150px;
-}
-
-#javascript {
-  height: 100px;
-}
-
-#mysql {
-  height: 100px;
-}
-
-#nodejs {
-  height: 100px;
-}
-
-#react {
-  height: 100px;
-}
 
 /* video */
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
@@ -224,3 +383,74 @@ margin-left: 5rem;
   color: #000;
   mix-blend-mode: screen;
 } */
+
+/* Tablets and Under */
+@media(max-width: 768px) {
+  .bio {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    height: auto;
+  }
+
+  .bio-text {
+    display: flex;
+    flex-direction: left;
+    text-align: center;
+    margin: 0;
+    min-width: 500px;
+  }
+
+  .grid-container-projects {
+    min-width: 680px;
+    padding: 10px;
+    margin: 0 0;
+  }
+
+  .projects {
+    margin-top: 80rem;
+  }
+
+  .skills {
+    justify-content: start;
+  }
+}
+
+/* mobile */
+@media(max-width: 500px) {
+  .nav {
+    height: 110px;
+  }
+
+  .nav-links {
+    display:flex;
+    flex-direction: column;
+    padding: 10px;
+  }
+
+  .bio {
+    height: auto;
+  }
+
+  .bio-text {
+    text-align: center;
+    max-width: 450px;
+    min-width: 450px;
+  }
+
+  .projects h2 {
+    justify-self: center;
+  }
+  .projects {
+    margin-top: 80rem;
+  }
+  .grid-container-projects {
+    margin-top: 5rem;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    
+  }
+}
+
+
+
