--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,6 +13,15 @@ body {
   color: antiquewhite;
 }
 
+/* .hidden {
+  opacity: 0;
+  transition: all .5s;
+}
+
+.show {
+  opacity: 1;
+} */
+
 /* Navigation */
 
 nav {
